fixed migrations and removed scrollbars from anywhere in the app

--- a/imports/modules/core/components/style.css
+++ b/imports/modules/core/components/style.css
@@ -48,3 +48,7 @@
   background-color: green;
   margin-right: 4px;
 }
+
+::-webkit-scrollbar {
+  display: none;
+}
